# zoekt-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  RELEASING.md  pyproject.toml  server.json
.github/: release.yml
.github/workflows/: ci.yml  release.yml
deploy/: README.md  docker-compose.yml  index.sh
examples/express-app/: README.md  index.js  package.json
examples/flask-app/: README.md  app.py
scripts/: release.sh
src/zoekt_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
tests/: conftest.py  test_client_unit.py  test_integration.py  test_server_shaping.py
tests/fixtures/: down.sh  up.sh
