[project]
name = "zoekt-mcp"
version = "0.1.0"
description = "MCP server that exposes Sourcegraph Zoekt code search to AI agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Michael Wuergler", email = "wuergler@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["mcp", "zoekt", "code-search", "sourcegraph", "llm", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
zoekt-mcp = "zoekt_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/wuergler/zoekt-mcp"
Issues = "https://github.com/wuergler/zoekt-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoekt_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
