[project]
name = "zoekt-mcp"
version = "0.3.1"
description = "MCP server that exposes Sourcegraph Zoekt code search to AI agents"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Michael Wuergler", email = "wuergler@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["mcp", "zoekt", "code-search", "sourcegraph", "llm", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.7",
]

[dependency-groups]
dev = [
    "pre-commit>=3.7",
    "pymarkdownlnt>=0.9.36",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
]

[project.scripts]
zoekt-mcp = "zoekt_mcp.__main__:main"

[project.urls]
Repository = "https://github.com/radiovisual/zoekt-mcp"
Issues = "https://github.com/radiovisual/zoekt-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zoekt_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

# Python linting / formatting (ruff). Wired into the pre-commit hook
# and the GitHub Actions CI workflow.
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic default set: pyflakes + pycodestyle + isort + pyupgrade +
# bugbear. Keep it tight enough to catch real issues without fighting
# the existing style.
select = ["E", "F", "W", "I", "UP", "B"]

# Markdown linting (pymarkdownlnt). Wired into the pre-commit hook
# and the GitHub Actions CI workflow.
[tool.pymarkdown]
# Line length is hostile to documentation with long URLs, code fences,
# and wide tables. We wrap prose by hand; rule MD013 is off.
plugins.md013.enabled = false
# Markdown inside tight lists (e.g. list items with fenced code under
# them) trips MD046 / MD032 in ways that fight readable formatting.
# We keep the core rules on and only relax the ones that fight us.
plugins.md046.enabled = false
# We use raw <details>/<summary> for the Troubleshooting Q&A accordions
# in README.md, which CommonMark renderers (GitHub, etc.) display as
# collapsible sections. MD033 forbids inline HTML by default; allow it.
plugins.md033.enabled = false
